--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ language: node_js
 node_js:
   - "10"
 script:
-  - npm run build
+  - cd client
+  - npm run build --prod
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
-  local-dir: dist
+  local-dir: client/dist/client
   on:
     branch: master
 cache: npm
