--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 node_js:
   - "10"
 script:
-  - cd client
   - npm ci
   - npm run build --prod
 deploy:
@@ -10,7 +9,7 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
-  local-dir: client/dist/client
+  local-dir: dist/client
   on:
     branch: master
 cache: npm
