--- a/angular.json
+++ b/angular.json
@@ -22,8 +22,8 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets", "src/CNAME"],
-            "styles": ["src/styles.scss"],
+            "assets": ["src/favicon.ico", "src/assets", "src/CNAME", "src/robots.txt"],
+            "styles": ["node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.css", "src/styles.scss"],
             "scripts": [],
             "es5BrowserSupport": true
           },
