--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "client:test": "ng test",
     "client:lint": "ng lint",
     "server:start": "node server/app",
-    "server:dev": "nodemon server.app",
+    "server:dev": "nodemon server/app",
     "server:lint": "eslint server",
     "start": "npm run server:start",
     "build": "npm run client:build -- --prod",
@@ -31,6 +31,7 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-material-design": "^4.1.1",
@@ -40,6 +41,7 @@
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "http-errors": "^1.7.2",
+    "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
