--- a/package.json
+++ b/package.json
@@ -22,52 +22,52 @@
     "lint": "npm run client:lint; npm run server:lint"
   },
   "dependencies": {
-    "@angular/animations": "~8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
-    "@angular/forms": "~8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/router": "~8.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.1.1",
-    "axios": "^0.19.0",
+    "@angular/animations": "^8.0.3",
+    "@angular/common": "^8.0.3",
+    "@angular/compiler": "^8.0.3",
+    "@angular/core": "^8.0.3",
+    "@angular/forms": "^8.0.3",
+    "@angular/platform-browser": "^8.0.3",
+    "@angular/platform-browser-dynamic": "^8.0.3",
+    "@angular/router": "^8.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
-    "bootstrap-material-design": "^4.1.1",
-    "core-js": "^2.5.4",
+    "bootstrap": "^4.4.1",
+    "bootstrap-material-design": "^4.1.2",
+    "core-js": "^2.6.11",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.18.0",
-    "http-errors": "^1.7.2",
-    "mongoose": "^5.6.0",
-    "morgan": "^1.9.1",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "helmet": "^3.21.3",
+    "http-errors": "^1.7.3",
+    "mongoose": "^5.9.5",
+    "morgan": "^1.10.0",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.0",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
+    "@angular-devkit/build-angular": "^0.800.6",
+    "@angular/cli": "^8.0.6",
+    "@angular/compiler-cli": "^8.0.3",
+    "@angular/language-service": "^8.0.3",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^13.9.3",
+    "codelyzer": "^5.2.1",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.19.1"
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "nodemon": "^2.0.2",
+    "protractor": "^5.4.3",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.4.5"
   }
 }
